희정_클래스View페이지프론트수정

--- a/src/main/webapp/resources/css/class/classView.css
+++ b/src/main/webapp/resources/css/class/classView.css
@@ -1,56 +1,6 @@
 @charset "UTF-8";
 .classViewWrap {
-	padding-top: 120px;
-}
-.customoverlay {
-	position: relative;
-	bottom: 85px;
-	border-radius: 6px;
-	border: 1px solid #ccc;
-	border-bottom: 2px solid #ddd;
-	float: left;
-}
-
-.customoverlay:nth-of-type(n) {
-	border: 0;
-	box-shadow: 0px 1px 2px #888;
-}
-
-.customoverlay a {
-	display: block;
-	text-decoration: none;
-	color: #000;
-	text-align: center;
-	border-radius: 6px;
-	font-size: 14px;
-	font-weight: bold;
-	overflow: hidden;
-	background: #e7438b;
-	background: #e7438b
-		url(http://t1.daumcdn.net/localimg/localimages/07/mapapidoc/arrow_white.png)
-		no-repeat right 14px center;
-}
-
-.customoverlay .title {
-	display: block;
-	text-align: center;
-	background: #fff;
-	margin-right: 35px;
-	padding: 10px 15px;
-	font-size: 14px;
-	font-weight: bold;
-}
-
-.customoverlay:after {
-	content: '';
-	position: absolute;
-	margin-left: -12px;
-	left: 50%;
-	bottom: -12px;
-	width: 22px;
-	height: 12px;
-	background:
-		url('http://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white.png');
+	padding: 160px 0 120px;
 }
 
 .clJoinOkBtn {
@@ -75,7 +25,12 @@
 	flex-grow: 1;
 	background: #59bfbf;
 	height: 2px;
-	margin: 0px 16px;
+}
+.hr-sect::before{
+	margin-right:10px;
+}
+.hr-sect::after{
+	margin-left:10px;
 }
 
 .clContent .clContentLeft {
@@ -84,14 +39,23 @@
 	font-weight: 1000;
 }
 
-.clContent .clContentLeft div {
+.clContent .clContentLeft .clContentView {
 	width: 100%;
-	height: auto;
+    height: 350px;
+    overflow-y: auto;
+    background: #f9f9f9;
+    padding: 10px;
+}
+.clContent .clContentLeft .clContentView p{
+	margin: 0;
+    line-height: 32px;
 }
 
 .clContent .clContentLeft .clContentTitle p {
 	color: #59bfbf;
-	font-size: 180%;
+    font-size: 36px;
+    font-weight: bold;
+    margin-bottom: 0;
 }
 
 .clContent .clContentLeft .clContentSummary p {
@@ -102,15 +66,12 @@
 .clContent .clContentLeft .clContentThumnail img {
 	width: 100%;
 	height: 450px;
-	border-radius: 5px;
 }
 
 .clContent .clContentRight {
-	width: 100%;
-	height: auto;
-	font-weight: 1000;
+	padding-top: 20px;
 }
-
+/*
 .clContent .clContentRight .clContentDetailHaed button {
 	background-color: #59bfbf;
 	color: #ffffff;
@@ -134,13 +95,15 @@
 }
 
 .clContent .clContentRight .clContentDetailBody .list-group .applyMenu .classJoinForm .applyBtn {
-	width: 100%;
-	font-weight: 1000;
-	background-color: #59bfbf;
-	color: #ffffff;
-	border: none;
-	outline: 0;
-	border-radius: 10px;
+	width: 85%;
+    background-color: #59bfbf;
+    color: #ffffff;
+    border: none;
+    border-radius: 10px;
+    font-size: 20px;
+    padding: 8px;
+    display: block;
+    margin: 0 auto;
 }
 
 .clContent .clContentRight .clContentDetailBody .list-group .applyMenu .classJoinForm .applyBtn:hover {
@@ -175,69 +138,253 @@
 .clContent .clContentRight .clContentDetailBody .diff .clDiffGroup .clDiffBtnE,
 	.clDiffBtnN {
 	margin-right: 10px;
+} */
+
+
+
+	/*
+	* 우측 사이드바
+	*/
+.clContentRight .classInfoTitle{
+	margin-bottom: 0;
+    background: #59bfbf;
+    width: 35%;
+    padding: 10px;
+    text-align: center;
+    color: #fff;
+}
+.clContentRight .clContentDetailBody{
+	border: 2px solid #59bfbf;
+    width: 100%;
+}
+.clContentRight .clContentDetailBody .detailBody-ul{
+	list-style: none;
+    padding: 20px 20px 0;
+    margin-bottom: 0;
+}
+.clContentRight .clContentDetailBody .detailBody-li{
+	margin-bottom: 20px;
+    letter-spacing: 0.08rem;
+}
+.clContentRight .clContentDetailBody .detailBody-li .clInfoTitle{
+	margin-bottom: 5px;
+    color: #59bfbf;
+    font-weight: bold;
+}
+.clContentRight .clContentDetailBody .detailBody-li .clInfoTitle i{
+	margin-right:6px;
+}
+.clContentRight .clContentDetailBody .detailBody-li .clInfoTxt{
+	margin: 0;
+    padding-left: 25px;
+}
+.clContentRight .clContentDetailBody .detailBody-li #classEndCountDown{
+	color:#e7438b;
+	font-weight:bold;
+}
+.clContentRight .clContentDetailBody .detailBody-li .classCurrentPeople{
+	letter-spacing: 1rem;
+}
+.clContentRight .clContentDetailBody .detailBody-li .classCurrentPeople span{
+	color: #e7438b;
+	font-weight:bold;
 }
 
-.clContent .clContentRight .clContentDetailBody .clPlaceMap #map {
-	width: 100%;
-	height: 300px;
-	overflow: auto;
-	border-radius: 5px;
+.clContentRight .clContentDetailBody .detailBody-li .clDiffGroup{
+	padding: 0 25px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.clContentRight .clContentDetailBody .detailBody-li .clDiffGroup .clDiff{
+	margin: 0;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background: #26274c;
+    color: #fff;
+    text-align: center;
+    padding-top: 18px;
+}
+.clContentRight .clContentDetailBody .detailBody-li .clDiffGroup .clDiffSelect{
+	background: #e7438b!important;
+}
+
+	/*
+	* Kakao Map
+	*/
+
+.customoverlay {
+	position: relative;
+    bottom: 43px;
+    left: 3px;
+    right: 0;
+    border-radius: 6px;
+    float: left;
+}
+
+.customoverlay:nth-of-type(n) {
+	border: 0;
+	box-shadow: 0px 1px 2px #888;
+}
+
+.customoverlay a {
+	display: block;
+    text-decoration: none;
+    color: #000;
+    text-align: center;
+    border-radius: 6px;
+    font-size: 14px;
+    font-weight: bold;
+    overflow: hidden;
+    background: #e7438b url(http://t1.daumcdn.net/localimg/localimages/07/mapapidoc/arrow_white.png) no-repeat right 11px center;
+    background-size: 4%;
+}
+
+.customoverlay .title {
+	display: block;
+    text-align: center;
+    background: #fff;
+    margin-right: 25px;
+    padding: 5px 10px;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.customoverlay:after {
+	content: '';
+    position: absolute;
+    margin-left: -10px;
+    left: 50%;
+    bottom: -10px;
+    width: 20px;
+    height: 10px;
+    background: url(http://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white.png) no-repeat;
+    background-size: 80%;
+}
+.clContentRight .clContentDetailBody .detailBody-li .clInfoMap{
+	margin-bottom: 10px;
+}
+
+.clContent .clContentRight .clContentDetailBody .applyMenu .classJoinForm .applyBtn {
+	width: 85%;
+    background-color: #59bfbf;
+    color: #ffffff;
+    border: none;
+    border-radius: 10px;
+    font-size: 18px;
+    padding: 8px;
+    display: block;
+    margin: 0 auto;
+}
+
+.clContent .clContentRight .clContentDetailBody .applyMenu .classJoinForm .applyBtn:hover {
+	background-color: #e7438b;
+	border: none;
+	outline: 0;
 }
 
 .clContent .clContentRight .clContentDetailBody .menuBtn button {
-	width: 70px;
-	height: 70px;
+	width: 45px;
+	height: 45px;
 	background-color: #e5e5e5;
 	color: #26274c;
+	margin : 0 10px;
+}
+.clContent .clContentRight .clContentDetailBody .menuBtn .btnWrap{
+	display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 15px;
+}
+.clContent .clContentRight .clContentDetailBody .menuBtn button i{
+	font-size: 20px;
+    vertical-align: bottom;
 }
 
 .clContent .clContentRight .clContentDetailBody .menuBtn button:hover {
 	background-color: #e7438b;
 	color: #ffffff;
 }
+.clContent .clContentRight .clContentDetailBody .menuBtn .shareBtn{
+	margin: 0 10px;
+    width: 45px;
+    height: 45px;
+}
+.clContent .clContentRight .clContentDetailBody .menuBtn .shareBtn .share{
+	display: block;
+    cursor: pointer;
+}
+.clContent .clContentRight .clContentDetailBody .menuBtn .shareBtn .share img{
+	max-width:100%;
+}
 
-.clContent .clContentRight .clContentDetailBody .applyMenu .classJoinForm .modal-header
+	/*
+	* 수강신청폼
+	*/
+.detailBody-li .modal-dialog{
+	max-width: 400px;
+	font-size: 14px;
+}
+.detailBody-li .modal-header
 	{
 	background-color: #59bfbf;
 }
 
-.clContent .clContentRight .clContentDetailBody .applyMenu .classJoinForm .modal-header p
-	{
-	font-size: 120%;
-	color: #ffffff;
+.detailBody-li .modal-header p{
+	font-size: 18px;
+    color: #fff;
+}
+.detailBody-li .modal-dialog .classImg{
+	width: 80%;
+    margin: 0 auto;
+}
+.detailBody-li .modal-body .classImg img {
+	max-width: 100%;
 }
 
-.clContent .clContentRight .clContentDetailBody .applyMenu .classJoinForm .modal-body p img {
-	width: 100%;
-	height: auto;
-	border-radius: 10px;
-}
 
-.clContent .clContentRight .clContentDetailBody .applyMenu .classJoinForm .modal-body .table {
-	font-size: 110%;
+.detailBody-li .modal-body table{
+	width: 80%;
+	margin: 15px auto 0;
 }
-
-.clContent .clContentRight .clContentDetailBody .applyMenu .classJoinForm .modal-footer
-	{
-	display: table;
+.detailBody-li .modal-body table td{
+	padding-bottom:10px;
 }
-
-.clContent .clContentRight .clContentDetailBody .applyMenu .classJoinForm .modal-footer .cjoinBtn button
-	{
-	width: 80px;
-	height: 80px;
-	border-radius: 50%;
-	color: #59bfbf;
+.detailBody-li .modal-body table td:last-child{
+	padding-bottom:0;
 }
-
-.clContent .clContentRight .clContentDetailBody .applyMenu .classJoinForm .modal-footer .cjoinBtn button:hover
-	{
+.detailBody-li .modal-body table td.tb-title{
+    color: #59bfbf;
+    font-weight: bold;
+}
+.detailBody-li .modal-footer{
+	flex-direction: column;
+}
+.detailBody-li .modal-footer .paymentInfo{
+	margin-bottom:10px;
+}
+.detailBody-li .modal-footer .cjoinBtn{
+	margin-bottom:15px;
+}
+.detailBody-li .modal-footer .cjoinBtn button{
+	width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    color: #59bfbf;
+    margin: 0 10px;
+}
+.detailBody-li .modal-footer .cjoinBtn button i{
+	font-size:22px;
+}
+.detailBody-li .modal-footer .cjoinBtn button:hover{
 	background-color: #e7438b;
 	color: #ffffff;
 }
 
 .clContent .clQuestion {
 	width: 100%;
+	margin-top: 60px;
 }
 
 .clContent .clQuestion .questionForm {
