혜인 - 스크랩 삭제 기능 완료, 내 리뷰 시간 조정 완료, 개설한 클래스 페이징 완료

--- a/src/main/webapp/resources/css/user/mypage.css
+++ b/src/main/webapp/resources/css/user/mypage.css
@@ -87,7 +87,7 @@ p {
 	border: none;
 }
 
-#selectDeleteBtn1 {
+#selectDeleteBtn_Sboard, #selectDeleteBtn_SClass,#selectDeleteBtn_SEating {
 	font-size: 0.8rem;
 	border-radius: 7px;
 	background: #59bfbf;
