--- a/src/main/webapp/resources/css/class/classView.css
+++ b/src/main/webapp/resources/css/class/classView.css
@@ -41,7 +41,7 @@
 
 .clContent .clContentLeft .clContentView {
 	width: 100%;
-    height: 350px;
+    height: 450px;
     overflow-y: auto;
     background: #f9f9f9;
     padding: 10px;
@@ -418,12 +418,12 @@
 	border:none; 
 	background-color:#e7438b; 
 	color:#ffffff; 
-	cursor: pointer;" 
+	cursor: pointer;
 }
 
 .commentModify textarea {
-	border:none; 
 	width:650px;
+	resize: none;
 }
 
 .commentModify p button {
@@ -431,7 +431,7 @@
 	border:none; 
 	background-color:#e7438b; 
 	color:#ffffff; 
-	cursor: pointer;" 	
+	cursor: pointer;	
 }
 .clQuestionPage .page-link{
 	padding: .5rem!important;
