--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -9,6 +9,7 @@ section{padding:40px 0;}
 	color: #3e3e3e!important;
 	font-weight: bold!important;
 	display: block!important;
+	cursor: pointer;
 }
 .userBtn:hover{
 	color:#59bfbf!important;
