희정_오늘뭐먹지+카카오링크멘트수정+프론트조금수정

--- a/src/main/webapp/resources/css/eating/ninja-slider.css
+++ b/src/main/webapp/resources/css/eating/ninja-slider.css
@@ -52,7 +52,7 @@
     font-size:0px;
     position:relative;
     box-sizing:border-box;
-    padding-bottom:100px!important;
+    padding:50px!important;
 }
 
 #ninja-slider.fullscreen .slider-inner {
