--- a/src/main/webapp/resources/css/eating/eatingMain.css
+++ b/src/main/webapp/resources/css/eating/eatingMain.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @import url(http://fonts.googleapis.com/earlyaccess/jejugothic.css);
 
-.sc-eatingBanner{
+#eatingBanner{
 	padding: 230px 0 140px;
     background: url(/eepp/img/eating/eatingBanner1.jpg);
     position: relative;
