희정_썸머노트에디터관련css수정

--- a/src/main/webapp/resources/css/board/boardView.css
+++ b/src/main/webapp/resources/css/board/boardView.css
@@ -195,6 +195,9 @@
 	margin: 0;
     line-height: 32px;
 }
+.contentMain img{
+	max-width:100%;	
+}
 .contentWrap .btnWrap{
 	display: flex;
     justify-content: center;
