--- a/src/main/webapp/resources/css/class/classMain.css
+++ b/src/main/webapp/resources/css/class/classMain.css
@@ -70,9 +70,9 @@
 * 모집기간 마감된 클래스
 */
 #isEndedClass .classWrapper{
-	background: #f5f5f5!important;
+	background: #dadada!important;
     opacity: 0.6!important;
-    border: 1px solid #f5f5f5!important;
+    border: 1px solid #dadada!important;
 }
 
 #isEndedClass .classWrapper .clBtn button{
