민영 맛집 테마리스트 수정

--- a/src/main/webapp/resources/css/eating/eatingThema.css
+++ b/src/main/webapp/resources/css/eating/eatingThema.css
@@ -51,8 +51,8 @@
 .eatingThema .col-sm-12 .eatList .eatList_tr .eatList_td2 .e1 .eatTitle {
 	font-size: 160%; 
 	font-weight: 600;
-	margin-left: 20px; 
-	display: inline;
+	margin-left: 20px;
+	margin-bottom: 10px;
 }
 
 .eatingThema .col-sm-12 .eatList .eatList_tr .eatList_td2 .e1 .eatTitle a {
