--- a/src/main/webapp/resources/css/eating/eatingThema.css
+++ b/src/main/webapp/resources/css/eating/eatingThema.css
@@ -31,7 +31,7 @@
 
 .eatingThema .col-sm-12 .eatList {
 	width:100%;
-	/* margin-bottom: 100px; */
+	margin: 40px 0;
 }
 
 .eatingThema .col-sm-12 .eatList .eatList_tr {
